--- a/forgettable-frontend/src/pages/SettingsPage/DarkMode.css
+++ b/forgettable-frontend/src/pages/SettingsPage/DarkMode.css
@@ -1,34 +1,11 @@
 @import '../../colours.css';
 
-:root {
-    --font-color: #333;
-    --background-color: var(--bkgd);
-    --link-color: cornflowerblue;
-}
-
-[data-theme="dark"] {
-    --font-color: #eee;
-    --background-color: var(--bkgd);
-    --link-color: lightblue;
-}
-  
-body {
-    background-color: var(--background-color);
-    color: var(--font-color);
-}
-
-a {
-    color: var(--link-color);
-}
-
 /* Custom Dark Mode Toggle Element */
 
 .toggle-theme-wrapper {
     display: flex;
     flex-direction: row;
     align-items: center;
-    /* margin-left: 320px; */
-    /* margin-top: -29px; */
 }
 
 .toggle-theme-wrapper span {
@@ -60,10 +37,10 @@ a {
 
 .slider:before {
     background-color: #5A5A5A;
-    bottom: 3px;
+    bottom: 2px;
     content: "";
     height: 26px;
-    left: 6px;
+    left: 5px;
     position: absolute;
     transition: 0.4s;
     width: 26px;
@@ -75,14 +52,14 @@ input:checked + .slider:before {
 }
 
 input:checked + .slider {
-    background-color: #020200;
+    background-color: var(--bkgd);
 }
 
 .slider.round {
     border-radius: 34px;
     border-style: solid;
-    border-color: #4F4F4F;
-    border-width: 0.5px;
+    border-color: var(--line);
+    border-width: 2px;
 }
 
 .slider.round:before {
